<resources>
    <string name="app_name">Brujo Wines</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_vinos">Vinos</string>
    <string name="title_usuario">Usuario</string>
    <string name="title_galeria">Galeria</string>
    <string name="title_reservas">Reservas</string>
    <string name="carta_reserva_cata">Reserva para Cata de Vinos</string>
    <string name="carta_reserva_visita">Reserva para Visita a la Bodega</string>
    <string name="reserva_ahora">Reserva Ahora</string>
    <string name="personas">Nº de Personas:</string>
    <string name="fecha">Fecha de Reserva:</string>
    <string name="nombre">Nombre</string>
    <string name="sign_out">Cerrar Sesión</string>
    <string name="restablecer_password">Restablecer Contraseña</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Contraseña</string>
    <string name="login">Login</string>
    <string name="password_olvidada">¿Has olvidado la contraseña?</string>
    <string name="registrar">Registrar</string>
    <string name="cover_image">Imagen de viñas</string>
    <string name="icono_vino">Icono de Vino</string>
    <string name="titania_blanco">Titania Blanco</string>
    <string name="titania_blanco_desc_1">Este vino blanco 100% tempranillo ha sido elaborado en nuestras
        instalaciones de San Vicente de la Sonsierra en Rioja Alta</string>
    <string name="titania_blanco_desc_2">La característica principal de esta peculiar variedad es que conseguimos
                        vinos originales y diferentes a la gran mayoría de vinos blancos en Rioja
                        mayormente elaborados con la variedad Viura.</string>
    <string name="titania_blanco_desc_3">También son vinos con elevado grado alcohólico, 13,5% en caso de Titania,
        aromas a frutas con hueso, por ejemplo el melocotón y florales.</string>
    <string name="titania_blanco_desc_4">
En boca son persistentes y muy equilibrados entre acidez y grado alcohólico, consiguiendo que en boca sea sedoso y amable.
    </string>
    <string name="titania_blanco_desc_5">Debido a que es una variedad de maduración temprana, hemos encontrado una
        localizacion para plantar nuestras cepas de tempranillo blanco a una altura de 650 metros, cuando la media en
        Rioja ronda los 500 metros, en un suelo arcilloso que nos permiten retrasar una completa maduración de todos los parámetros de la uva.
    </string>
    <string name="titania_blanco_desc_6">
        Nuestro Titania ha fermentado en acero inoxidable a una temperatura
        de 12-14 grados durante 28 días, manteniendo sus lias para
        conseguir una mayor estructura y complejidad
    </string>
    <string name="titania_blanco_desc_7">Después de este proceso, ha estado durante casi 3 meses
        en barricas nuevas mixtas, con duelas al 50% roble frances y
        50% roble americano, de tostado medio bajo para respetar la tipicidad de la variedad.</string>
    <string name="titania_blanco_desc_8">Un afinado en botella de 6 meses antes de salir al mercado, confiere a nuestro Titania una elegancia, frescura, y equilibrio con los aromas tostados de
        roble que hacen que la nariz y la boca de este fino sean sedosos, agradables, y sobre todo nos invite a beber por su facilidad de consumo.</string>
    <string name="titania_blanco_desc_9">
        Es aconsejable disfrutarlo a una temperatura de 4º-6ºc.
    </string>
    <string name="titania_tinto">Titania Tinto</string>
    <string name="titania_tinto_desc_1">Este vino tinto 100% tempranillo ha sido elaborado en nuestras instalaciones de San Vicente de la Sonsierra en Rioja Alta</string>
    <string name="titania_tinto_desc_2">El Tempranillo en la zona de la Sonsierra Riojana es la variedad más característica y que mejor se adapta debido a las peculiares características tanto de suelo como de clima en tan privilegiada zona, así como a la confluencia de climas tanto atlánticos como mediterráneos, provocados por la existencia al norte de la Sierra Cantabria y al sur del Rio Ebro. La zona posee una combinación de suelos pobres arcilloso calcáreos y de cascajo, perfectos para el cultivo de Tempranillo, obteniendo producciones muy bajas y de máxima calidad.</string>
    <string name="titania_tinto_desc_4">Titania tinto es un vino obtenido de viñedos de más de 50 años, y las cepas ya son “maduras” es decir saben auto-regularse, para defenderse del estrés hídrico y de la escasez de nutrientes, produciendo racimos pequeños, con elevada cantidad de azúcar y concentración fenólica.</string>
    <string name="titania_tinto_desc_5">A pesar de ser un vino con casi 14% alcohol, es un vino sedoso, con una estructura en boca potente y con tanino amable que nos deja un impresionante sabor a fruta equilibrada con los toques de coco y café procedente del roble americano, y toques de vainilla y frutos secos y balsámicos procedentes del roble francés.</string>
    <string name="titania_tinto_desc_6">Elaborado en tanques de acero inoxidable con una fermentación controlada durante 15 días, además de otros 10 días de maceración, más tarde permanece durante 2 meses en contacto directo con hormigón para hacer la fermentación maloláctica, y conseguir una mejor estabilidad de su estructura y una mayor concentración de color y aromas.</string>
    <string name="titania_tinto_desc_7">Concluido este proceso permanece durante 10 meses en barricas nuevas mixtas, esto quiere decir que son barricas a estrenar, y que cada una tiene madera roble americano y roble francés al 50%, de esta manera el vino descansa durante este tiempo adquiriendo las ventajas de cada tipo de madera, evitando tener que hacer mezclas que degradarían al vino una vez terminado el proceso de crianza.</string>
    <string name="titania_tinto_desc_8">Después del tiempo de barrica, ha permanecido al menos 6 meses en nuestras instalaciones finalizando el proceso de fusión aromática y afinado en boca. No es un crianza, no es un reserva, ni es un gran reserva, simplemente es un vino elaborado a nuestro gusto, nuestro gusto de autor, de elaborador, para disfrutar en su plenitud sin pensar en objetivos comerciales ni establecidos por el mercado, simplemente es el vino que nos gusta a nosotros.</string>
    <string name="titania_tinto_desc_9">Recomendamos disfrutarlo a una temperatura de 12-14 grados con carnes rojas, caza o guisos que nos ayuden a potenciar las agradables sensaciones que nos transmite Titania. Titania nos permite disfrutar de la tipicidad, excelencia y sobre todo exclusividad de la Sonsierra en una simple copa de vino.</string>
    <string name="titania_rosado">Titania Rosado</string>
    <string name="titania_rosado_desc_1">
Titania Rosado 100% tempranilloha sido elaborado en nuestras instalaciones de San Vicente de la Sonsierra en Rioja Alta.</string>
    <string name="titania_rosado_desc_2">Titania Rosado es un vino obtenido de viñedos de más de 50 años, y las cepas ya son “maduras” es decir saben auto-regularse, para defenderse del estrés hídrico y de la escasez de nutrientes, produciendo racimos pequeños, con elevada cantidad de azúcar y concentración fenólica. TITANIA ROSADO es obtenido mediante un proceso llamado “sangrado”de las uvas de tempranillo que nos servirán para elaborar TITANIA TINTO. Cuando llegan las uvas a la bodega se extrae el mosto nada más entrar en los depósitos, separándolo de los hollejos para no extraer demasiado color, resultando esa tonalidad rosa pálido piel de cebolla y mantener la frescura aromática tan valorada en este tipo de elaboración.</string>
    <string name="titania_rosado_desc_3">
Al finalizar el proceso tenemos un rosado muy aromático, floral y una agujamuy finapara culminar un conjunto muy sabroso, con ligeros toques almibarados, melocotón y sensación dulzona siendo totalmente seco.</string>
    <string name="titania_rosado_desc_4">El Tempranillo en la zona de la Sonsierra Riojana es la variedad más característica y que mejor se adapta debido a las peculiares características tanto de suelo como de clima en tan privilegiada zona, debido a la confluencia de climas tanto atlánticos como mediterráneos, provocados por la existencia al norte de la Sierra Cantabria y al sur del Rio Ebro, y una combinación de suelos pobres arcilloso calcáreos y de cascajo, perfectos para el cultivo de Tempranillo, obteniendo producciones de tempranillo muy bajas y de máxima calidad.</string>
    <string name="titania_rosado_desc_5">Una vez en el deposito, el mosto rosado comienza la fermentación de manera totalmente espontanea, y durante 25 días y a una temperatura de 12 grados se va transformando el azúcar en alcohol, manteniendo acidez y pH alto, para que la sensación en boca sea de total equilibrio y frescura. Una vez terminada la fermentación permanece en depósitos de hormigón durante 4 meses previos al embotellado para conseguir un vino estable de manera totalmente natural.</string>
    <string name="titania_rosado_desc_6">Recomendamos disfrutarlo a una temperatura de 6-8 grados con entrantes ligeros, aperitivos, arroces, pasta fresca y pescados, para disfrutar de las agradables sensaciones que nos sugiere Titania Rosado. Titania Rosado nos permite disfrutar de la tipicidad, frutalidad, excelencia y sobre todo exclusividad de la Sonsierra en una simple copa de vino.</string>
    <string name="titania_logo_text">Logo de Titania</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Galeria">Galeria</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_reservar">ReservarActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cata_de_vinos">Cata de vinos</string>
    <string name="visita_a_la_bodega">Visita a la bodega</string>
    <string name="brujo_wines_logo">Logo de Brujo Wines</string>
    <string name="fecha_ejemplo">30 de Mayo, 19:00</string>
    <string name="lugar">Lugar:</string>
    <string name="tipo_de_reserva">Tipo de Reserva:</string>
    <string name="nuevo_tipo_de_reserva">Nuevo Tipo de Reserva:</string>
    <string name="numero_de_personas">Numero de Personas:</string>
    <string name="zero">0</string>
    <string name="ver_otra_reserva">Ver Otra</string>
    <string name="ver_otro">Ver Otro</string>
    <string name="Cancelar">Cancelar</string>
    <string name="foto_de_vi_as">Foto de Viñas</string>
    <string name="editar_reserva">Editar</string>
    <string name="datos_reserva">Datos Reserva:</string>
    <string name="hh_mm">HH:MM</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="nueva_fecha_de_reserva">Nueva Fecha de Reserva:</string>
    <string name="nuevo_numero_de_personas">Nuevo Numero de Personas:</string>
    <string name="numero_de_personas_actual">Numero de Personas Actual:</string>
    <string name="fecha_de_reserva_actual">Fecha de Reserva Actual:</string>
    <string name="one">1</string>
    <string name="barra">-</string>
    <string name="barrica">Barrica</string>
    <string name="uvas">uvas</string>
    <string name="title_pedidos">Pedidos</string>
    <string name="mas">+</string>
    <string name="menos">-</string>
</resources>