<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_inicio"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_inicio" />

    <item
        android:id="@+id/navigation_vinos"
        android:icon="@drawable/ic_vino_black_24dp"
        android:title="@string/title_vinos" />

    <item
        android:id="@+id/navigation_reservas"
        android:icon="@drawable/ic_reservas_24"
        android:title="@string/title_reservas" />

    <item
        android:id="@+id/navigation_pedidos"
        android:icon="@drawable/ic_mailbox"
        android:title="@string/title_pedidos" />

    <item
        android:id="@+id/navigation_usuario"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_usuario" />

</menu>