<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TextView
            android:id="@+id/tv_editar_datos_reserva_texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/datos_reserva" />
        <TextView
            android:id="@+id/tv_editar_tipo_reserva_actual_texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tipo de Reserva Actual:" />
        <TextView
            android:id="@+id/tv_editar_tipo_reserva_actual_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/barra" />
        <TextView
            android:id="@+id/tv_editar_tipo_reserva_nueva_texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nuevo_tipo_de_reserva" />

        <ToggleButton
            android:id="@+id/editar_toggleButtonCataVisita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOn="@string/cata_de_vinos"
            android:textOff="@string/visita_a_la_bodega"/>


        <TextView
            android:id="@+id/tv_editar_numero_personas_actual_texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numero_de_personas_actual" />
        <TextView
            android:id="@+id/tv_editar_numero_personas_actual_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/barra" />
        <TextView
            android:id="@+id/tv_editar_numero_personas_nueva_texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nuevo_numero_de_personas" />

        <EditText
            android:id="@+id/et_editar_numero_personas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/one"
            android:inputType="number"
            android:minHeight="48dp"  />

        <TextView
            android:id="@+id/tv_editar_fecha_reserva_actual_texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha_de_reserva_actual" />
        <TextView
            android:id="@+id/tv_editar_fecha_reserva_actual_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/barra" />
        <TextView
            android:id="@+id/tv_editar_fecha_reserva_nueva_texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nueva_fecha_de_reserva" />
        <EditText
            android:id="@+id/et_editar_fecha_reserva_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:focusable="false"
            android:hint="@string/dd_mm_yyyy"
            android:inputType="date"
            android:minHeight="48dp" />
        <EditText
            android:id="@+id/et_editar_fecha_reserva_tiempo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:focusable="false"
            android:hint="@string/hh_mm"
            android:inputType="date"
            android:minHeight="48dp" />


        <Button
            android:text="@string/editar_reserva"
            android:id="@+id/editar_editar_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>