<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_inicio">

    <fragment
        android:id="@+id/navigation_inicio"
        android:name="com.youngdred.brujowines.ui.inicio.InicioFragment"
        android:label="@string/title_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/navigation_vinos"
        android:name="com.youngdred.brujowines.ui.vinos.VinosFragment"
        android:label="@string/title_vinos"
        tools:layout="@layout/fragment_vinos" />

    <fragment
        android:id="@+id/navigation_reservas"
        android:name="com.youngdred.brujowines.ui.reservas.ReservasFragment"
        android:label="@string/title_reservas"
        tools:layout="@layout/fragment_reservas" />

    <fragment
        android:id="@+id/navigation_usuario"
        android:name="com.youngdred.brujowines.ui.usuario.UsuarioFragment"
        android:label="@string/title_usuario"
        tools:layout="@layout/fragment_usuario" />

</navigation>