<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReservarActivity">

    <ImageView
        android:id="@+id/iv_reservar_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/titania_logo_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_reservar_logo">


        <ToggleButton
            android:id="@+id/toggleButtonCataVisita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOn="@string/cata_de_vinos"
            android:textOff="@string/visita_a_la_bodega"/>

        <TextView
            android:id="@+id/tv_numero_personas_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personas" />

        <EditText
            android:id="@+id/et_numero_personas_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="1"
            android:inputType="number"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/tv_fecha_reserva_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha" />

        <EditText
            android:id="@+id/et_fecha_reserva_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:focusable="false"
            android:hint="DD/MM/YYYY"
            android:inputType="date"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/tv_fecha_reserva_tiempo_texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha" />

        <EditText
            android:id="@+id/et_fecha_reserva_tiempo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:focusable="false"
            android:hint="HH:00"
            android:inputType="date"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btn_reservar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reserva_ahora" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>