<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_visita_bodegas"
        android:layout_width="140dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/foto_de_vi_as"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/cancelar_reserva_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_reserva_carta_fecha_texto"
        app:srcCompat="@drawable/uvas2" />

    <TextView
        android:id="@+id/tv_reserva_carta_fecha_texto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/fecha"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_visita_bodegas"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_reserva_carta_fecha_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/barra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_reserva_carta_fecha_texto"
        app:layout_constraintTop_toBottomOf="@id/tv_reserva_carta_fecha_texto" />

    <TextView
        android:id="@+id/tv_reserva_carta_personas_texto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/numero_de_personas"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_reserva_carta_fecha_texto"
        app:layout_constraintTop_toBottomOf="@id/tv_reserva_carta_fecha_info"/>

    <TextView
        android:id="@+id/tv_reserva_carta_tipo_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/barra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_reserva_carta_fecha_info"
        app:layout_constraintTop_toBottomOf="@id/tv_reserva_carta_personas_texto" />

    <TextView
        android:id="@+id/tv_reserva_carta_tipo_texto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tipo_de_reserva"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_reserva_carta_fecha_texto"
        app:layout_constraintTop_toBottomOf="@id/tv_reserva_carta_tipo_info"/>

    <TextView
        android:id="@+id/tv_reserva_carta_personas_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/barra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_reserva_carta_fecha_info"
        app:layout_constraintTop_toBottomOf="@id/tv_reserva_carta_tipo_texto" />

    <Button
        android:id="@+id/ver_otra_reserva_button"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_otra_reserva"
        app:layout_constraintStart_toEndOf="@+id/iv_visita_bodegas"
        app:layout_constraintTop_toBottomOf="@+id/tv_reserva_carta_personas_info" />

    <Button
        android:id="@+id/cancelar_reserva_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editar_reserva"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toEndOf="@+id/ver_otra_reserva_button"
        app:layout_constraintTop_toTopOf="@+id/ver_otra_reserva_button" />


</androidx.constraintlayout.widget.ConstraintLayout>