<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ImageView
        android:id="@+id/iv_vino_tienda"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/titania_blanco" />

    <TextView
        android:textColor="@color/black"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titania_blanco"
        app:layout_constraintEnd_toEndOf="@+id/iv_vino_tienda"
        app:layout_constraintStart_toStartOf="@+id/iv_vino_tienda"
        app:layout_constraintTop_toBottomOf="@+id/iv_vino_tienda" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/iv_vino_tienda"
        app:layout_constraintStart_toStartOf="@+id/iv_vino_tienda"
        app:layout_constraintTop_toBottomOf="@+id/iv_vino_tienda">

        <Button
            android:id="@+id/boton_mas_vino"
            android:layout_width="32dp"
            android:layout_height="48dp"
            android:layout_margin="4sp"
            android:layout_weight="1"
            android:text="@string/mas" />

        <Button
            android:id="@+id/boton_menos_vino"
            android:layout_width="32dp"
            android:layout_height="48dp"
            android:layout_margin="4sp"
            android:layout_weight="1"
            android:text="@string/menos" />
    </LinearLayout>

    <TextView
        android:id="@+id/unidades_vino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/iv_vino_tienda"
        app:layout_constraintStart_toStartOf="@+id/iv_vino_tienda"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>